Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,18 @@ body {
     background-size: calc(1.25*711px) calc(1.25*539px); */
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizedLegibility;
+    overflow: hidden;
 }
 
 #nav {
-    position: fixed;
+    position: absolute;
     height: 50px;
     width: 100%;
     margin-top: 0px;
     font-size: 1.5em;
     overflow: hidden;
 }
+
 
 #logo {
     position: absolute;
@@ -46,6 +48,7 @@ body {
     width: 400px;
 }
 
+
 #logo a h1{
     width: 340px;
     height: 100px;
@@ -53,6 +56,7 @@ body {
     text-indent: -9999px;
     padding-top: 0px;
 }
+
 
 #menu {
     position: relative;
@@ -65,6 +69,7 @@ body {
     color: #ff6666;
     background-color: #fff;
 }
+
 
 #menu ul li {
     padding: 5px;
@@ -129,5 +134,9 @@ h2 {
 #wrapper div{
     width: 940px;
     margin: 50px auto;
+}
+
+#content{
+    position: absolute;
 }
 
